--- a/Models/FlowMatching/2025.05.19_OZSpeech.md
+++ b/Models/FlowMatching/2025.05.19_OZSpeech.md
@@ -328,3 +328,167 @@ This relationship is expressed as $\tilde{\mathbf{z}}_1 = \mathbf{z}_{\text{pr}}
 We define the total loss function used in our joint training method as $\mathcal{L}_{total} = \mathcal{L}_{prior} + \mathcal{L}_{dur} + \mathcal{L}_{CFM} + \mathcal{L}_{anchor}$.
 
 The loss functions \(\mathcal{L}_{prior}\) and \(\mathcal{L}_{dur}\) set the training objective for the Prior Codes Generator, whereas \(\mathcal{L}_{CFM}\) and \(\mathcal{L}_{anchor}\) are designed to construct the vector field and distill the sampling steps, respectively.
+
+## 4·Experiments
+
+> <a id="tab:overall-results"></a>
+> Performance evaluation on the *LibriSpeech test-clean* across different audio prompt lengths. **Bold** indicates the best result, and \underline{underline} indicates the second-best result. ($\uparrow$) indicates that higher values are better, while ($\downarrow$) indicates that lower values are better. $[\spadesuit]$ means reproduced results. $[\bigstar]$ and $[\clubsuit]$ mean results inferred from official and ufficial checkpoints, respectively.
+
+Abbreviation: LT (LibriTTS), E (Emilia), GS (GigaSpeech).
+
+### Experiment Setup
+
+**Dataset**.
+
+We employ the *LibriTTS* dataset [^Zen2019LibriTTS], which comprises multi-speaker English audio recordings of training data. 
+For benchmarking purposes, we use the *LibriSpeech test-clean* [^Panayotov2015Librispeech] dataset. 
+More detailed information is provided in Appendix [sec:data](#sec:data).\\[8pt]
+**Evaluation Metrics**.
+
+To assess model performance, we employ the following objective evaluation metrics for each criterion: speech quality, quantified by UTMOS; speaker similarity, measured using SIM-O and SIM-R; robustness, indicated by WER; and prosody accuracy and error, analyzed through pitch and energy.
+
+Additionally, we employ NFE and RTF metrics to measure the latency of the sampling process.
+
+More details on the evaluation metrics can be found in Appendix [sec:metrics](#sec:metrics).\\[8pt]
+**Baselines**.
+
+We compare our model with previous zero-shot TTS baselines.
+
+Further details regarding baselines are available in Appendix [appendix:baselines](#appendix:baselines).
+
+### Main Results
+
+> <a id="tab:size-rtf-results"></a>
+> Comparison of model size and latency for 3s audio prompt length.
+
+Column **\#Params** indicates the total number of parameters required for end-to-end synthesis, with the first value representing the parameters of the zero-shot model (trainable) and the second value corresponding to those of the neural codec or vocoder component (frozen).
+
+Table [tab:overall-results](#tab:overall-results) shows the performance of OZSpeech and representative baseline methods for 1s, 3s, and 5s audio prompt lengths.  OZSpeech establishes a new SOTA on WER across all audio prompt lengths, demonstrating superior content preserving capability through a *multi-fold* reduction in WER.
+
+For example, OZSpeech reduces WER by a factor of $1.8 - 6.8$ over the other methods for 5s prompt length.
+
+Some of these models, such as F5-TTS, are trained on substantially more training data (F5-TTS is trained on 95,000 hours of speech whereas OZSpeech is trained on 500 hours).
+
+Compared to the next-best method, OZSpeech yields a relative reduction in WER by 58\%, 44\%, and 44\% for  1s, 3s, and 5s audio prompt lengths, respectively.  Additionally, while the WER scores of all baseline methods are sensitive to prompt length, OZSpeech maintains a consistent WER regardless of prompt length.
+
+For pitch and energy accuracies and errors, which indicate the prosody reconstruction ability of TTS systems, OZSpeech consistently ranks as the best or second-best performer across different prompt lengths.
+
+For the remaining metrics (UTMOS, SIM-O, and SIM-R), our method in overall does not exhibit an obvious performance advantage over the baseline models. (We note that these models also experience trade-offs between different metrics.) However, our goal is to enhance the balance between intelligibility (i.e. content accuracy) and acoustical/perceptual quality while maintaining low latency and small model size.%However, our goal is to enhance the balance between intelligibility (i.e. content accuracy), model size, sampling speed, and speech synthesis capability without much compromise in speech perceptual qualities. % Pros: WER improvement is multifold.
+
+Sampling speed is fast.
+
+Model size is smallest
+
+Our UTMOS scores show a rather small degradation compared to some of the baselines, particularly VALL-E and VoiceCraft.
+
+This is largely due to differences in the neural codecs' trade-offs between acoustic and semantic representations.
+
+EnCodec (VoiceCraft’s codec) primarily relies on acoustic codes, while SpeechTokenizer (VALL-E’s codec in this experiment) incorporates one semantic sequence alongside acoustic codes.
+
+In contrast, FaCodec (OZSpeech’s codec) strives to balance both representations.
+
+However, our focus is on optimizing the trade-off between sampling speed and speech synthesis quality.
+% This could unlock new potential for non-autoregressive models, as the number of network forwards is significantly smaller compared to related non-autoregressive baselines.
+
+We also retrain F5-TTS with 500~hours of the LibriTTS dataset using the official code for 1 million steps following its guideline, however the resulting WER exceeds 0.95 across all settings, so we exclude this retrained checkpoint from Table~[tab:overall-results](#tab:overall-results)  and instead use the officially released checkpoint, which is trained on 95,000 hours of data.
+
+The poor retraining results suggest that this method, which is based on traditional OT-CFM, requires a much larger, more diverse dataset for robustness.
+
+In contrast, neural codec-based models remain effective with limited data, likely due to extensive pre-training of the neural codec module on massive datasets.
+
+Thus, traditional OT-CFM methods like F5-TTS are unsuitable for low-resource languages.
+
+Table [tab:size-rtf-results](#tab:size-rtf-results) compares the model sizes and latency of OZSpeech and baseline models.
+
+OZSpeech is the smallest model of all, being only 29\%-71\% the size of the other models.
+
+When considering only the trainable part of the models, the number of trainable parameters of OZSpeech is only 17\%-43\% that of the other models.
+
+For the NFE metric, our model uses only a single sampling step, significantly reducing computation compared to NaturalSpeech 2 and F5-TTS, which require 200 and 32 steps, respectively, to achieve optimal performance.
+
+As a result, in terms of inference speed represented by the RTF metric, OZSpeech is almost 3 times faster than the next fastest model, F5-TTS.
+
+### Ablation Study
+
+> <a id="tab:prompting-strategy"></a>
+> Comparison of two prompting strategies during training: *First Segment* and *Arbitrary Segment*.
+
+Table [tab:prompting-strategy](#tab:prompting-strategy) compares the performance of two prompting strategies: *First Segment* and *Arbitrary Segment*.
+
+The former generates prompts using the initial portion of the ground truth, whereas the latter selects random audio segments from the ground truth to form the prompts.
+
+The results clearly show that the *Arbitrary Segment* strategy outperforms the *First Segment* strategy across all metrics.
+
+In the *First Segment* setting, the model seems to overfit in that it is forced to transfer the prompt to the beginning of the target.
+
+In contrast, the *Arbitrary Segment* setting hides the position of the prompt, allowing it to smoothly transfer attributes from the prompt to the target.
+
+Consequently, we adopt the *Arbitrary Segment* approach for our training.
+
+This experiment also shows that the *Arbitrary Segment* approach improves robustness by exposing the model to a more diverse range of speech contexts, leading to better generalization in zero-shot speech synthesis.
+
+### Noise Tolerance Analysis
+
+> <a id="tab:noisy-test"></a>
+> Performance evaluation on noisy audio prompts.
+
+The noisy prompts are derived from the *LibriSpeech test-clean* dataset with additive noise augmentation.
+
+The prompts are 3-second long.
+
+The checkpoints of each model trained on *LibriTTS*—except for VoiceCraft, which was trained on *GigaSpeech*—are used without re-training the models to include noisy samples. $[\blacklozenge]$ means fine-tuned results on noisy prompts.
+
+This table highlights a vulnerable use case where speech prompts contain noise, assessing the tolerance of these models.
+
+SNR$=\infty$ indicates the prompts are directly obtained from *LibriSpeech test-clean* dataset and these results are simply copied from Table~[tab:overall-results](#tab:overall-results).
+
+Unlike previous studies, we propose to investigate the effects of noisy prompts in TTS.
+
+Table [tab:noisy-test](#tab:noisy-test) evaluates the tolerance of each model on noisy prompts.
+
+We conduct *zero-shot* testing of all models in this scenario, where zero-shot in this context means that the models trained on their original training dataset, typically with clean prompts, are directly tested on noisy prompts.
+
+For this, we generate three sets of noisy prompts at SNRs of 0dB, 6dB, and 12dB, respectively. $\text{SNR} =\infty$ refers to prompts directly sourced from *LibriSpeech test-clean* dataset, with metric values directly replicated from Table~[tab:overall-results](#tab:overall-results).
+
+Overall, all baseline methods are highly sensitive to noise in the audio prompts, experiencing significant degradation in all metrics as prompt SNR decreases.
+
+OZSpeech also shows similar sensitivity except for WER, which experiences either no or negligible degradation across all prompt SNR levels.
+
+VALL-E seems to be the most vulnerable to noise, where the WER increases by almost 2.7 times at the least noisy setting, SNR = 12dB.
+
+At SNR = 0dB, VALL-E  becomes almost unintelligible with a 93\% WER.
+
+The WER results highlight the robust intelligibility of OZSpeech, even in noisy prompt conditions. 
+
+Although OZSpeech performs sub-optimally in non-WER metrics with the original clean prompts, it surpasses all baseline models in UTMOS.
+
+This improvement is largely attributed to the significant performance drop observed in the baseline models.
+
+Mixed results are observed when comparing all models on the remaining metrics.% (speaker similarity, pitch, and energy)
+
+Next, we further fine-tune OZSpeech with both original and noisy prompts, where noisy prompts occur with a probability of 0.8.
+
+The noisy prompts are constructed by mixing the original prompts with random noise at different SNRs, drawn from a uniform distribution over the [0dB, 15dB] range.
+
+We leveraged the QUT-NOISE database [^Dean2010Qut-Noise-Timit] as our noise dataset.
+
+When tested with clean prompts (SNR = $\infty$), there is either no change or minimal changes in OZSpeech's performance across all metrics before and after fine-tuning.
+
+In noisy prompt conditions, WER remains unaffected by fine-tuning while the other metrics are significantly improved across all SNR levels.
+
+With decreasing SNR, fine-tuning generally yields increasingly larger improvements in all non-WER metrics.
+
+We have empirically demonstrated the feasibility of the noise-aware training approach, which aims to synthesize noise-free speech conditioned by noisy prompts.
+
+This approach enables Zero-Shot TTS models to implicitly remove noise from given codec codes while preserving key attributes of speech.
+
+Consequently, neural codec-based Zero-shot TTS systems, which have traditionally been vulnerable and sensitive to noisy prompts, exhibit enhanced robustness, particularly against adversarial attacks.
+
+	% UTMOS: all models suffer significant degradation, with larger degradation as the prompts get noisier (smaller SNR).
+	% SIM-O: lag just behind  VoiceCraft, outperforms others
+	% SIM-R: While VALL-E is the best performer with OZSpeech lags just behind for a marginal value of 0.01 for original prompt, it quickly degrades as the prompts get noisier.
+
+OZSpeech becomes the best performer for all 3 noisy scenarios. 
+	% PESQ: With original prompts, there is marginal difference among all methods.
+
+With noisy prompts,  VALL-E gets noticeable boost in PESQ while the other methods stay fairly the same. 
