--- a/Models/FlowMatching/2025.05.19_OZSpeech.md
+++ b/Models/FlowMatching/2025.05.19_OZSpeech.md
@@ -492,3 +492,21 @@ OZSpeech becomes the best performer for all 3 noisy scenarios.
 	% PESQ: With original prompts, there is marginal difference among all methods.
 
 With noisy prompts,  VALL-E gets noticeable boost in PESQ while the other methods stay fairly the same. 
+
+## 5·Conclusion
+
+We propose OZSpeech, an effective and efficient zero-shot TTS model that employs flow matching with a single sampling step from a learned prior instead of random noise.
+
+The model strikes a balance between synthesized speech intelligibility and acoustical quality.
+
+In particular, OZSpeech yields a multi-fold improvement in WER compared to existing baseline methods with some trade-off in the acoustical quality.
+
+Furthermore, unlike other methods, OZSpeech achieves a consistent WER across different audio prompt's lengths and noise levels.
+
+With a single-step sampling approach and a novel prior learning module that learns an effective starting point for the sampling process, our model requires significantly less computation, with inference speed being $2.7 - 6.5$ times faster than the other methods.
+
+In addition, our model size is only 29\%-71\% that of the other models.
+
+OZSpeech achieves competitive results even over models that are trained on much larger training sets.% These advantages form a a low-latency and efficient Zero=shot TTS system that 
+
+In future work, we plan to enhance OZSpeech by integrating adaptive noise filtering techniques and expanding its capability to support multilingual and multimodal zero-shot speech synthesis, enabling more versatile applications in real-world scenarios.
