--- a/Models/FlowMatching/2025.05.19_OZSpeech.md
+++ b/Models/FlowMatching/2025.05.19_OZSpeech.md
@@ -816,3 +816,13 @@ We use the official code and pre-trained checkpoint \footnote{\url{https://huggi
 -  **VALL-E** [^Chen2025Neural].
 
 We reproduce VALL-E using the Amphion toolkit [^Zhang2024Amphion] and train it under identical settings to our training dataset configuration.
+
+## 10·Extra Experiments
+
+Table~[tab:model-size-results](#tab:model-size-results) shows the performance of OZSpeech-Base (145M parameters) and OZSpeech-Small (100M parameters).
+
+Although at over 31\% reduction in size, the Small model shows comparable performance with the Base model across all metrics, except for pitch (**F0**).
+
+Interestingly, the Small model outperforms the Base model by 13.6\% in F0 RMSE for 1s prompt length (23.94 for Small vs. 27.70 for Base).
+
+However, for 3s prompt length, it experiences a 13.2\% relative decline in the same metric (13.54 for Small vs. 11.96 for Base).
