--- a/Models/FlowMatching/2025.05.19_OZSpeech.md
+++ b/Models/FlowMatching/2025.05.19_OZSpeech.md
@@ -826,3 +826,55 @@ Although at over 31\% reduction in size, the Small model shows comparable perfor
 Interestingly, the Small model outperforms the Base model by 13.6\% in F0 RMSE for 1s prompt length (23.94 for Small vs. 27.70 for Base).
 
 However, for 3s prompt length, it experiences a 13.2\% relative decline in the same metric (13.54 for Small vs. 11.96 for Base).
+
+## 11·Analysis
+
+As shown in Figure [fig:boxplot](#fig:boxplot), the distributions of performance metrics across different prompt lengths are as follows:
+
+-  **WER**: For the 1s prompt, OZSpeech exhibits a distribution that is very close to zero with a narrow box, indicating superior performance.
+
+The second best is NaturalSpeech 2, which shows a slightly right-shifted box compared to OZSpeech, followed by VoiceCraft.
+
+This pattern is consistent across the 3s and 5s prompts.
+
+In contrast, VALL-E and F5-TTS display higher distributions.
+
+Notably, F5-TTS shows slightly better performance than VALL-E for the 1s prompt.
+
+However, as the prompt length increases, F5-TTS significantly lags behind the other baselines, with its distribution approaching 0.5.
+
+-  **UTMOS**: The best performance for this metric is achieved by VALL-E for the 1s prompt.
+
+Its distribution shifts slightly to the right for the 3s prompt and stabilizes for the 5s prompt.
+
+VoiceCraft and OZSpeech show the next best performances, maintaining stable distributions across different prompt lengths, with VoiceCraft consistently outperforming OZSpeech.
+
+NaturalSpeech 2 scores mostly below 3.0 for the 1s prompt and shows improvement as the prompt length increases.
+
+Notably, F5-TTS consistently scores below 1.5, significantly lagging behind the other baselines.
+
+-  **SIM-O**: For the 1s prompt, the distributions of VoiceCraft and OZSpeech are almost equivalent, followed by VALL-E, F5-TTS, and NaturalSpeech 2, respectively.
+
+As the prompt length increases, the differences among the models become more noticeable.
+
+Specifically, VoiceCraft shows the best performance in retaining the speaker's identity in the synthesized output.
+
+VALL-E follows with the second-best performance, followed by OZSpeech and NaturalSpeech 2, respectively.
+
+In contrast, F5-TTS consistently demonstrates poor performance regardless of the prompt length.
+
+All in all, OZSpeech achieved competitive performance compared to other baselines.
+
+Although our method does not show a clear performance advantage over baseline models, our primary objective is to balance sampling speed and speech synthesis capability.
+
+This trade-off enables our method to maintain a small model size with low WER while preserving the naturalness of the speech and the speaker's identity style from the prompt in the synthesized output.
+
+In contrast to the baselines, which have larger models and require longer inference times (see Table [tab:size-rtf-results](#tab:size-rtf-results)), our method demonstrates a significant advantage.
+
+With just one sampling step, we can achieve promising performance.
+
+> <a id="fig:boxplot">![](figs/boxplot_1s.pdf)</a>
+
+> 1s Prompt
+
+\end{document}
