--- a/Models/FlowMatching/2025.05.19_OZSpeech.md
+++ b/Models/FlowMatching/2025.05.19_OZSpeech.md
@@ -878,3 +878,54 @@ With just one sampling step, we can achieve promising performance.
 > 1s Prompt
 
 \end{document}
+
+## References
+
+[^Chen2025Neural]: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. IEEE Transactions on Audio, Speech and Language Processing 2025.
+[^Chen2024Vall-E]: VALL-E 2: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers. 
+[^Zhang2023Speak]: Speak Foreign Languages With Your Own Voice: Cross-Lingual Neural Codec Language Modeling. arXiv:2303.03926.
+[^Han2024Vall-E]: VALL-E R: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment. arXiv:2406.07855.
+[^Meng2024Autoregressive]: Autoregressive Speech Synthesis Without Vector Quantization. CoRR 2024.
+[^Song2024Ella-V]: ELLA-V: Stable Neural Codec Language Modeling With Alignment-Guided Sequence Reordering. 
+[^Peng2024V}oice{C}raft]: {V}oice{C}raft: Zero-Shot Speech Editing and Text-to-Speech in the Wild. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2024.
+[^Ji2024M}obile{S}peech]: {M}obile{S}peech: A Fast and High-Fidelity Framework for Mobile Zero-Shot Text-to-Speech. Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2024.
+[^Eskimez2024E2]: {E2 TTS}: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot {TTS}. 
+[^Le2023Voicebox]: Voicebox: Text-Guided Multilingual Universal Speech Generation at Scale. Thirty-Seventh Conference on Neural Information Processing Systems 2023.
+[^Vyas2023Audiobox]: Audiobox: Unified Audio Generation With Natural Language Prompts. 
+[^Shen2024NaturalSpeech]: NaturalSpeech 2: Latent Diffusion Models Are Natural and Zero-Shot Speech and Singing Synthesizers. The Twelfth International Conference on Learning Representations 2024.
+[^Ju2024N}atural{S}peech]: {N}atural{S}peech 3: Zero-Shot Speech Synthesis With Factorized Codec and Diffusion Models. Proceedings of the 41st International Conference on Machine Learning 2024.
+[^Song2023Consistency]: Consistency Models. Proceedings of the 40th International Conference on Machine Learning 2023.
+[^Frans2024One]: One Step Diffusion via Shortcut Models. 
+[^Lipman2023Flow]: Flow Matching for Generative Modeling. The Eleventh International Conference on Learning Representations 2023.
+[^Ho2020Denoising]: Denoising Diffusion Probabilistic Models. Advances in Neural Information Processing Systems 2020.
+[^Song2021Score-Based]: Score-Based Generative Modeling Through Stochastic Differential Equations. International Conference on Learning Representations 2021.
+[^Kang2023ZET-Speech]: ZET-Speech: Zero-Shot Adaptive Emotion-Controllable Text-to-Speech Synthesis With Diffusion and Style-Based Models. Interspeech 2023 2023.
+[^Tran2023Sten-Tts]: STEN-TTS: Improving Zero-Shot Cross-Lingual Transfer for Multi-Lingual TTS With Style-Enhanced Normalization Diffusion Framework. Interspeech 2023 2023.
+[^Liu2023Flow]: Flow Straight and Fast: Learning to Generate and Transfer Data With Rectified Flow. The Eleventh International Conference on Learning Representations 2023.
+[^Kim2023P-Flow]: P-Flow: A Fast and Data-Efficient Zero-Shot {TTS} Through Speech Prompting. Thirty-Seventh Conference on Neural Information Processing Systems 2023.
+[^Mehta2024Matcha-Tts]: Matcha-Tts: A Fast TTS Architecture With Conditional Flow Matching. ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Chen2024F5-Tts]: F5-Tts: A Fairytaler That Fakes Fluent and Faithful Speech With Flow Matching. 
+[^Wang2023Neural]: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. arXiv:2301.02111.
+[^Kharitonov2023Speak,]: Speak, Read and Prompt: High-Fidelity Text-to-Speech With Minimal Supervision. Transactions of the Association for Computational Linguistics 2023.
+[^Chen2024Vall-E]: VALL-E 2: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers. arXiv:2406.05370.
+[^Ju2024NaturalSpeech]: NaturalSpeech 3: Zero-Shot Speech Synthesis With Factorized Codec and Diffusion Models. Forty-First International Conference on Machine Learning 2024.
+[^Du2024UniCATS]: UniCATS: A Unified Context-Aware Text-to-Speech Framework With Contextual VQ-Diffusion and Vocoding. Proceedings of the AAAI Conference on Artificial Intelligence 2024.
+[^Zeghidour2022SoundStream]: SoundStream: An End-to-End Neural Audio Codec. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2022.
+[^Oord2017Neural]: Neural Discrete Representation Learning. Proceedings of the 31st International Conference on Neural Information Processing Systems 2017.
+[^Du2024Cosyvoice]: Cosyvoice: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens. arXiv:2407.05407.
+[^Ren2019FastSpeech]: FastSpeech: Fast, Robust and Controllable Text to Speech. Advances in Neural Information Processing Systems 2019.
+[^Hu2024Flow]: Flow Matching for Conditional Text Generation in a Few Sampling Steps. Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics (Volume 2: Short Papers) 2024.
+[^Gong2023DiffuSeq]: DiffuSeq: Sequence to Sequence Text Generation With Diffusion Models. The Eleventh International Conference on Learning Representations 2023.
+[^Gao2024Empowering]: Empowering Diffusion Models on the Embedding Space for Text Generation. Proceedings of the 2024 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers) 2024.
+[^Zen2019LibriTTS]: LibriTTS: A Corpus Derived From LibriSpeech for Text-to-Speech. Interspeech 2019 2019.
+[^Panayotov2015Librispeech]: Librispeech: An ASR Corpus Based on Public Domain Audio Books. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
+[^Dean2010Qut-Noise-Timit]: The QUT-NOISE-TIMIT Corpus for Evaluation of Voice Activity Detection Algorithms. Proceedings of the 11th Annual Conference of the International Speech Communication Association 2010.
+[^Gulati2020Conformer]: Conformer: Convolution-Augmented Transformer for Speech Recognition. Interspeech 2020 2020.
+[^McAuliffe2017Montreal]: Montreal Forced Aligner: Trainable Text-Speech Alignment Using Kaldi. Interspeech 2017 2017.
+[^Saeki2022Utmos]: UTMOS: UTokyo-SaruLab System for VoiceMOS Challenge 2022. 
+[^Rix2001Perceptual]: Perceptual Evaluation of Speech Quality (PESQ)-a New Method for Speech Quality Assessment of Telephone Networks and Codecs. 2001 IEEE International Conference on Acoustics, Speech, and Signal Processing. Proceedings (Cat. No.01CH37221) 2001.
+[^Guo2022PromptTTS]: PromptTTS: Controllable Text-to-Speech With Text Descriptions. 
+[^Ji2024TextrolSpeech]: TextrolSpeech: A Text Style Control Speech Corpus With Codec Language Text-to-Speech Models. ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Chen2021GigaSpeech]: GigaSpeech: An Evolving, Multi-Domain ASR Corpus With 10,000 Hours of Transcribed Audio. Interspeech 2021 2021.
+[^Zhang2024Amphion]: Amphion: An Open-Source Audio, Music and Speech Generation Toolkit. {IEEE} Spoken Language Technology Workshop, {SLT} 2024 2024.
+[^He2024Emilia]: Emilia: An Extensive, Multilingual, and Diverse Speech Dataset for Large-Scale Speech Generation. Proc.~of SLT 2024.
