--- a/Models/E2E/2025.10.21_ParaStyleTTS.md
+++ b/Models/E2E/2025.10.21_ParaStyleTTS.md
@@ -120,3 +120,34 @@ Fig.01: Training pipeline of ParaStyleTTS
 </td><td>
 
 </td></tr></table>
+
+## 2·Related Work
+
+<table><tr><td width="50%">
+
+Recent advances in style-controllable TTS models have aimed to enhance expressiveness, multilingual capabilities, and controllability over various aspects of speech such as prosody, emotion, and speaker identity.
+Table~[Tab.01](#tab:model_comparison) provides a comparative overview of representative models, categorized by their control method and levels of style control.
+VITS[^Kim2021Conditional] adopts a variational autoencoder framework that learns the speaking style of speakers from the training data and uses learned speaker embeddings to control the timbre and speaking style of the generated speech during inference.
+While it achieves high naturalness and supports direct waveform generation through an end-to-end architecture, it lacks prompt-based controllability and disentangled style modeling.
+Paralinguistic styles are typically entangled within the latent variables with limited interpretability and fine-grained control.
+StyleSpeech[^Lou2024StyleSpeech] and LanStyleTTS[^Lou2025Generalized] introduce phoneme-level style control mechanisms by aligning prosodic style tokens with phonemes.
+Each phoneme is associated with its own prosody style token, enabling fine-grained, interpretable control over prosodic features.
+This approach is particularly effective for tonal languages such as Chinese.
+However, these models are not end-to-end and rely on external vocoders, limiting their efficiency.
+Moreover, they struggle to generalize to StyleSpeech[^Lou2024StyleSpeech] and LanStyleTTS[^Lou2025Generalized] introduce phoneme-level style control mechanisms by aligning prosodic style tokens with individual phonemes.
+Each phoneme is associated with its own style token, enabling fine-grained and interpretable control over prosodic features.
+This design is particularly effective for tonal languages such as Chinese, where pitch and intonation are linguistically meaningful.
+However, these models lack the ability to control high-level paralinguistic styles such as emotion, age, or intent, which limits their expressiveness in broader speech generation scenarios.
+More recent models, including Spark-TTS[^Wang2025Spark-TTS] and CosyVoice[^Du2024Cosyvoice], leverage either speech or text-based prompt with LLMs to control speaking style.
+CosyVoice introduces a text-prompted system that enables paralinguistic control.
+Specifically, it concatenates the style prompt and content into a single input sequence and relies on LLMs to convert this sequence into meaningful semantic tokens for decoding into stylized speech.
+While this approach provides flexibility and multilingual generalization, it also introduces notable limitations.
+Our experiments show that CosyVoice is highly sensitive to prompt phrasing.
+For example, altering the prompt from “a female speaker” to “a female speaker is speaking Chinese” can lead to a speech generated with an incorrect speaking style.
+In one case, the model generated speech with a female voice even when the prompt explicitly described a male speaker.
+This suggests that the model may overfit to specific prompt formulations seen during training, resulting in poor generalization to compositionally complex or open-ended prompts.
+A more systematic evaluation is warranted to assess the robustness and reliability of prompt-based style control in such models.
+
+</td><td>
+
+</td></tr></table>
