--- a/Models/E2E/2025.10.21_ParaStyleTTS.md
+++ b/Models/E2E/2025.10.21_ParaStyleTTS.md
@@ -723,3 +723,17 @@ This level of robustness is essential for real-world TTS applications, especiall
 </td><td>
 
 </td></tr></table>
+
+## 6·Conclusion
+
+<table><tr><td width="50%">
+
+In conclusion, we propose a novel style-controllable TTS model, ParaStyleTTS, that enables efficient, robust, and expressive control over speaking style.
+ParaStyleTTS introduces a novel two-level style modeling architecture that captures both local prosodic and global paralinguistic styles and supports flexible control over speaking styles such as emotion, gender, and age.
+It adopts an acoustic-centric, end-to-end design that can generate high-quality speech directly from input text and style prompts.
+Experiments demonstrate that ParaStyleTTS outperforms LLM-based baselines in both style accuracy and computational efficiency.
+It achieves over 30x faster inference, up to 8x smaller model size, and 2.5x lower memory usage compared to CosyVoice, while maintaining consistent and expressive style control.
+
+</td><td>
+
+</td></tr></table>
