--- a/Models/E2E/2025.10.21_ParaStyleTTS.md
+++ b/Models/E2E/2025.10.21_ParaStyleTTS.md
@@ -737,3 +737,50 @@ It achieves over 30x faster inference, up to 8x smaller model size, and 2.5x low
 </td><td>
 
 </td></tr></table>
+
+## 7·Limitations and Future Work
+
+<table><tr><td width="50%">
+
+While ParaStyleTTS demonstrates strong performance in naturalness and paralinguistic style control, it still falls slightly behind CosyVoice in overall intelligibility and subjective naturalness.
+In future work, we plan to expand the training dataset by incorporating a greater variety of speakers, speaking styles, and languages to help bridge this gap.
+Additionally, the current model supports only three paralinguistic styles.
+We aim to extend controllability to a broader range of paralinguistic styles, such as personality, speaking tone, and energy level, to enable a more comprehensive control of speaking style in TTS model.
+
+</td><td>
+
+</td></tr>
+<tr><td colspan="2">
+
+<a id="tab:dataset">![]()</a>
+
+</td></tr>
+<tr><td>
+
+Tab.08: Distribution of Training Data by Speaking Style
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+</td><td>
+
+</td></tr>
+<tr><td colspan="2">
+
+<a id="tab:text_prompt">![]()</a>
+
+</td></tr>
+<tr><td>
+
+Tab.09: Text Prompts Used for Gender-specific Style Control
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+</td><td>
+
+</td></tr></table>
