--- a/Models/E2E/2025.10.21_ParaStyleTTS.md
+++ b/Models/E2E/2025.10.21_ParaStyleTTS.md
@@ -800,3 +800,34 @@ Data preprocessing and analysis are performed without the aid of GenAI tools.
 </td><td>
 
 </td></tr></table>
+
+## References
+
+[^Wang2017Tacotron]: Tacotron: Towards End-to-End Speech Synthesis. arXiv:1703.10135.
+[^Ren2019Fastspeech]: Fastspeech: Fast, Robust and Controllable Text to Speech. Advances in Neural Information Processing Systems 2019.
+[^Ren2020Fastspeech]: Fastspeech 2: Fast and High-Quality End-to-End Text to Speech. arXiv:2006.04558.
+[^Kim2020Glow-Tts]: Glow-Tts: A Generative Flow for Text-to-Speech via Monotonic Alignment Search. Advances in Neural Information Processing Systems 2020.
+[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. International Conference on Machine Learning 2021.
+[^Lou2024StyleSpeech]: StyleSpeech: Parameter-Efficient Fine Tuning for Pre-Trained Controllable Text-to-Speech. Proceedings of the 6th ACM International Conference on Multimedia in Asia 2024.
+[^Lou2025Generalized]: Generalized Multilingual Text-to-Speech Generation With Language-Aware Style Adaptation. arXiv:2504.08274.
+[^Yao2024Survey]: A Survey on Large Language Model (Llm) Security and Privacy: The Good, the Bad, and the Ugly. High-Confidence Computing 2024.
+[^Du2024Cosyvoice]: Cosyvoice: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens. arXiv:2407.05407.
+[^Wang2025Spark-Tts]: Spark-Tts: An Efficient LLM-Based Text-to-Speech Model With Single-Stream Decoupled Speech Tokens. arXiv:2503.01710.
+[^{Carnegie Mellon University}2023Cmu]: {CMU Pronouncing Dictionary}. 
+[^Vaswani2017Attention]: Attention Is All You Need. Advances in Neural Information Processing Systems 2017.
+[^Song2020Mpnet]: Mpnet: Masked and Permuted Pre-Training for Language Understanding. Advances in Neural Information Processing Systems 2020.
+[^Perez2018Film]: Film: Visual Reasoning With a General Conditioning Layer. Proceedings of the AAAI Conference on Artificial Intelligence 2018.
+[^Kingma2019Introduction]: An Introduction to Variational Autoencoders. Foundations and Trends{\textregistered} in Machine Learning 2019.
+[^Goodfellow2014Generative]: Generative Adversarial Nets. Advances in Neural Information Processing Systems 2014.
+[^Papamakarios2021Normalizing]: Normalizing Flows for Probabilistic Modeling and Inference. Journal of Machine Learning Research 2021.
+[^Kingma2013Auto-Encoding]: Auto-Encoding Variational Bayes. 
+[^Databaker2020Chinese]: Chinese Mandarin Female Corpus. 
+[^Ito2017Lj]: The LJ Speech Dataset. 
+[^Zhou2021Seen]: Seen and Unseen Emotional Style Transfer for Voice Conversion With a New Emotional Speech Dataset. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Loshchilov2017Decoupled]: Decoupled Weight Decay Regularization. arXiv:1711.05101.
+[^Electrical1969Ieee]: IEEE Recommended Practice for Speech Quality Measurements. IEEE Transactions on Audio and Electroacoustics 1969.
+[^Chen2023Baspro]: BASPRO: A Balanced Script Producer for Speech Corpus Collection Based on the Genetic Algorithm. APSIPA Transactions on Signal and Information Processing 2023.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. International Conference on Machine Learning 2023.
+[^Ma2023Emotion2vec]: Emotion2vec: Self-Supervised Pre-Training for Speech Emotion Representation. arXiv:2312.15185.
+[^Elizalde2023Clap]: Clap Learning Audio Concepts From Natural Language Supervision. ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2023.
+[^Lipman2022Flow]: Flow Matching for Generative Modeling. arXiv:2210.02747.
